# python-flask/swagger_server/controllers/book_controller.py
@@ -1,17 +1,17 @@
 import connexion
 import six
 
+from swagger_server.models.book_success import BookSuccess  # noqa: E501
 from swagger_server.models.error_model import ErrorModel  # noqa: E501
-from swagger_server.models.inline_response200 import InlineResponse200  # noqa: E501
 from swagger_server import util
 
 
 def book_get():  # noqa: E501
     """book_get
 
-    List the books # noqa: E501
+    List the books. # noqa: E501
 
 
-    :rtype: InlineResponse200
+    :rtype: BookSuccess
     """
     return 'do some magic!'
