# python-flask/swagger_server/models/__init__.py
@@ -3,6 +3,6 @@
 # flake8: noqa
 from __future__ import absolute_import
 # import models into model package
+from swagger_server.models.book_success import BookSuccess
+from swagger_server.models.book_success_items import BookSuccessItems
 from swagger_server.models.error_model import ErrorModel
-from swagger_server.models.inline_response200 import InlineResponse200
-from swagger_server.models.inline_response200_items import InlineResponse200Items
