# python-flask/swagger_server/models/book_success.py
@@ -1,0 +1,65 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server.models.book_success_items import BookSuccessItems  # noqa: F401,E501
+from swagger_server import util
+
+
+class BookSuccess(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, items: List[BookSuccessItems]=None):  # noqa: E501
+        """BookSuccess - a model defined in Swagger
+
+        :param items: The items of this BookSuccess.  # noqa: E501
+        :type items: List[BookSuccessItems]
+        """
+        self.swagger_types = {
+            'items': List[BookSuccessItems]
+        }
+
+        self.attribute_map = {
+            'items': 'items'
+        }
+        self._items = items
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'BookSuccess':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The bookSuccess of this BookSuccess.  # noqa: E501
+        :rtype: BookSuccess
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def items(self) -> List[BookSuccessItems]:
+        """Gets the items of this BookSuccess.
+
+
+        :return: The items of this BookSuccess.
+        :rtype: List[BookSuccessItems]
+        """
+        return self._items
+
+    @items.setter
+    def items(self, items: List[BookSuccessItems]):
+        """Sets the items of this BookSuccess.
+
+
+        :param items: The items of this BookSuccess.
+        :type items: List[BookSuccessItems]
+        """
+        if items is None:
+            raise ValueError("Invalid value for `items`, must not be `None`")  # noqa: E501
+
+        self._items = items
