# python-flask/swagger_server/models/book_success_items.py
@@ -1,0 +1,120 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class BookSuccessItems(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, title: str=None, author: str=None, publish_date: str=None):  # noqa: E501
+        """BookSuccessItems - a model defined in Swagger
+
+        :param title: The title of this BookSuccessItems.  # noqa: E501
+        :type title: str
+        :param author: The author of this BookSuccessItems.  # noqa: E501
+        :type author: str
+        :param publish_date: The publish_date of this BookSuccessItems.  # noqa: E501
+        :type publish_date: str
+        """
+        self.swagger_types = {
+            'title': str,
+            'author': str,
+            'publish_date': str
+        }
+
+        self.attribute_map = {
+            'title': 'title',
+            'author': 'author',
+            'publish_date': 'publishDate'
+        }
+        self._title = title
+        self._author = author
+        self._publish_date = publish_date
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'BookSuccessItems':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The bookSuccess_items of this BookSuccessItems.  # noqa: E501
+        :rtype: BookSuccessItems
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def title(self) -> str:
+        """Gets the title of this BookSuccessItems.
+
+
+        :return: The title of this BookSuccessItems.
+        :rtype: str
+        """
+        return self._title
+
+    @title.setter
+    def title(self, title: str):
+        """Sets the title of this BookSuccessItems.
+
+
+        :param title: The title of this BookSuccessItems.
+        :type title: str
+        """
+        if title is None:
+            raise ValueError("Invalid value for `title`, must not be `None`")  # noqa: E501
+
+        self._title = title
+
+    @property
+    def author(self) -> str:
+        """Gets the author of this BookSuccessItems.
+
+
+        :return: The author of this BookSuccessItems.
+        :rtype: str
+        """
+        return self._author
+
+    @author.setter
+    def author(self, author: str):
+        """Sets the author of this BookSuccessItems.
+
+
+        :param author: The author of this BookSuccessItems.
+        :type author: str
+        """
+        if author is None:
+            raise ValueError("Invalid value for `author`, must not be `None`")  # noqa: E501
+
+        self._author = author
+
+    @property
+    def publish_date(self) -> str:
+        """Gets the publish_date of this BookSuccessItems.
+
+
+        :return: The publish_date of this BookSuccessItems.
+        :rtype: str
+        """
+        return self._publish_date
+
+    @publish_date.setter
+    def publish_date(self, publish_date: str):
+        """Sets the publish_date of this BookSuccessItems.
+
+
+        :param publish_date: The publish_date of this BookSuccessItems.
+        :type publish_date: str
+        """
+        if publish_date is None:
+            raise ValueError("Invalid value for `publish_date`, must not be `None`")  # noqa: E501
+
+        self._publish_date = publish_date
