# python-flask/swagger_server/swagger/swagger.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.0
 info:
-  title: Book API (w/ actions)
-  description: API for tracking your books, authors and pub-dates.
+  title: Book API (w/ GitHub Actions)
+  description: "API for tracking your books, authors and pub-dates."
   termsOfService: https://app.swaggerhub.com/eula
   contact:
     name: Micheal Higgins
@@ -11,10 +11,10 @@ info:
     name: SmartBear License
     url: http://www.smartbear.com/licenses/2021/LICENSE-2.0.html
   version: 1.1.0
-  x-jira-ticket: SNOP-2216
+  x-jira-ticket: SNOP-2244
   x-security-approval: required
   x-filters:
-    status: Devlopment
+    status: ENV_Development
     business-unit: Retail
     business-domain: Books and Magazines
 servers:
@@ -30,7 +30,7 @@ paths:
     get:
       tags:
       - Book
-      description: List the books
+      description: List the books.
       operationId: book_get
       responses:
         "200":
@@ -38,7 +38,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/inline_response_200'
+                $ref: '#/components/schemas/bookSuccess'
         "401":
           description: Access token is missing or invalid
           content:
@@ -56,6 +56,24 @@ paths:
       x-openapi-router-controller: swagger_server.controllers.book_controller
 components:
   schemas:
+    bookSuccess:
+      required:
+      - items
+      type: object
+      properties:
+        items:
+          type: array
+          additionalProperties: false
+          items:
+            $ref: '#/components/schemas/bookSuccess_items'
+      example:
+        items:
+        - author: Robert Heinlein
+          publishDate: 12-01-1958
+          title: Time Enough For Love
+        - author: Robert Heinlein
+          publishDate: 12-01-1958
+          title: Time Enough For Love
     ErrorModel:
       type: object
       properties:
@@ -64,27 +82,10 @@ components:
         message:
           type: string
       description: Default error schema.
-    inline_response_200:
-      required:
-      - items
-      type: object
-      properties:
-        items:
-          type: array
-          items:
-            $ref: '#/components/schemas/inline_response_200_items'
-      example:
-        items:
-        - author: Robert Heinlein
-          title: Time Enough For Love
-          pub-date: 22-01-2021
-        - author: Robert Heinlein
-          title: Time Enough For Love
-          pub-date: 22-01-2021
-    inline_response_200_items:
+    bookSuccess_items:
       required:
       - author
-      - pub-date
+      - publishDate
       - title
       type: object
       properties:
@@ -94,13 +95,13 @@ components:
         author:
           type: string
           example: Robert Heinlein
-        pub-date:
+        publishDate:
           type: string
-          example: 22-01-2021
+          example: 12-01-1958
       example:
         author: Robert Heinlein
+        publishDate: 12-01-1958
         title: Time Enough For Love
-        pub-date: 22-01-2021
   securitySchemes:
     bearerAuth:
       type: http
